--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,9 +2,11 @@
 
 <configuration>
 	<appSettings>
-		<add key="RelativityHostName" value="" />
-		<add key="RelativityUserName" value="" />
-		<add key="RelativityUserPassword" value="" />
+		<add key="RelativityUrl" value="https://testvmaj10.kcura.corp/Relativity" />
+		<add key="RelativityServicesUrl" value="https://testvmaj10.kcura.corp/Relativity.Services" />
+		<add key="RelativityRestUrl" value="https://testvmaj10.kcura.corp/Relativity.Rest/api" />
+		<add key="RelativityUserName" value="relativity.admin@kcura.com" />
+		<add key="RelativityUserPassword" value="Test1234!" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -16,6 +18,11 @@
     <Paket>True</Paket>
     <assemblyIdentity name="System.ComponentModel" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.0.2.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <Paket>True</Paket>
+    <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
   </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
