--- a/Source/Relativity.Sync.Tests.Unit/app.config
+++ b/Source/Relativity.Sync.Tests.Unit/app.config
@@ -20,6 +20,11 @@
   </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
+    <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <Paket>True</Paket>
     <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="12.0.0.0" />
   </dependentAssembly>
