Update app.config; Add unit tests for checking error handling

--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,11 +2,11 @@
 
 <configuration>
 	<appSettings>
-		<add key="RelativityUrl" value="https://testvmaj10.kcura.corp/Relativity" />
-		<add key="RelativityServicesUrl" value="https://testvmaj10.kcura.corp/Relativity.Services" />
-		<add key="RelativityRestUrl" value="https://testvmaj10.kcura.corp/Relativity.Rest/api" />
-		<add key="RelativityUserName" value="relativity.admin@kcura.com" />
-		<add key="RelativityUserPassword" value="Test1234!" />
+		<add key="RelativityHostName" value="" />
+		<add key="RelativityServicesUrl" value="/Relativity.Services" />
+		<add key="RelativityRestUrl" value="/Relativity.Rest/api" />
+		<add key="RelativityUserName" value="" />
+		<add key="RelativityUserPassword" value="" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
