Changes regarding reviewer comments

--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,9 +2,9 @@
 
 <configuration>
 	<appSettings>
-		<add key="RelativityHostName" value=""/>
-		<add key="RelativityUserName" value=""/>
-		<add key="RelativityUserPassword" value=""/>
+		<add key="RelativityHostName" value="{change me}"/>
+		<add key="RelativityUserName" value="relativity.admin@relativity.com"/>
+		<add key="RelativityUserPassword" value="Test1234!"/>
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
