Change Newtonsoft version

--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,7 +2,7 @@
 
 <configuration>
   <appSettings>
-    <add key="RelativityHostName" value="{change me}" />
+    <add key="RelativityHostName" value="p-dv-vm-pste.kcura.corp" />
     <add key="RelativityUserName" value="relativity.admin@relativity.com" />
     <add key="RelativityUserPassword" value="Test1234!" />
     <add key="RelativityServicesUrl" value="/Relativity.Services" />
