--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -216,6 +216,9 @@
     </Content>
     <Content Include="Content\controls.grid.css" />
     <Content Include="Content\create-production-set.css" />
+    <Content Include="Content\fonts\open-sans-v15-latin-regular.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\header.css">
       <DependentUpon>header.scss</DependentUpon>
     </Content>
@@ -336,6 +339,12 @@
     </Content>
     <Content Include="..\Dependencies\kCura.FluidUI.Widgets.1.1.306\css\fonts\fluid-ui.woff">
       <Link>Content\fonts\fluid-ui.woff</Link>
+    </Content>
+    <Content Include="Content\fonts\open-sans-v15-latin-regular.woff">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\fonts\open-sans-v15-latin-regular.woff2">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="oi\unmanaged\cmmap000.bin" />
     <None Include="Properties\PublishProfiles\default.pubxml" />
