--- a/Source/Rip.E2ETests/Rip.E2ETests.csproj
+++ b/Source/Rip.E2ETests/Rip.E2ETests.csproj
@@ -37,11 +37,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestClass.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+	<None Include="paket.references" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -51,4 +53,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Import Project="..\..\.paket\paket.targets" />
 </Project>
