--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -7,6 +7,7 @@
     <add key="RelativityUserPassword" value="Test1234!" />
     <add key="RelativityServicesUrl" value="/Relativity.Services" />
     <add key="RelativityRestUrl" value="/Relativity.Rest/api" />
+    <add key="SuppressCertificateCheck" value="true" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
