tests for cross app domain wrappers

--- a/Source/kcura.IntegrationPoints.Domain.Tests/kCura.IntegrationPoints.Domain.Tests.csproj
+++ b/Source/kcura.IntegrationPoints.Domain.Tests/kCura.IntegrationPoints.Domain.Tests.csproj
@@ -61,7 +61,9 @@
     <Compile Include="Models\SourceWorkspaceDTOTests.cs" />
     <Compile Include="StackOfDisposablesTests.cs" />
     <Compile Include="Utils\WorkspaceAndJobNameUtilsTests.cs" />
+    <Compile Include="Wrappers\DataReaderCrossAppDomainWrapperTests.cs" />
     <Compile Include="Wrappers\DataReaderSafeDisposeWrapperTests.cs" />
+    <Compile Include="Wrappers\ProviderCrossAppDomainWrapperTests.cs" />
     <Compile Include="Wrappers\ProviderSafeDisposeWrapperTests.cs" />
   </ItemGroup>
   <ItemGroup>
