Implemented IntegrationPointRepository and adjusted all usages of RelativityObjectManager.Read<IntegrationPoint> to use the new repository to ensure that field mapping is retrieved properly

--- a/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Repositories\FieldRepositoryTests.cs" />
     <Compile Include="Repositories\FoundationRepositoryFactoryTests.cs" />
     <Compile Include="Repositories\Impementatons\RelativityObjectManagerTests.cs" />
+    <Compile Include="Repositories\IntegrationPointRepositoryTests.cs" />
     <Compile Include="Repositories\KeplerInstanceSettingRepositoryTests.cs" />
     <Compile Include="Repositories\ProductionRepositoryTests.cs" />
     <Compile Include="Repositories\KeplerKeywordSearchRepositoryTests.cs" />
