Added chromium as default UI test browser

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -72,7 +72,7 @@
 
 		<!-- Values for all WebDrivers -->
 		<!-- Acceptable values: chrome, firefox -->
-		<add key="UI.Browser" value="chrome" />
+		<add key="UI.Browser" value="chromium" />
 		<add key="UI.BrowserWidth" value="1920" />
 		<add key="UI.BrowserHeight" value="1400" />
 		<add key="UI.Options.Arguments.Headless" value="true" />
