--- a/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
+++ b/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
@@ -57,7 +57,9 @@
     <Compile Include="HealthChecks\SuccessHealthCheck.cs" />
     <Compile Include="Helpers\BackwardCompatibility.cs" />
     <Compile Include="Helpers\IBackwardCompatibility.cs" />
+    <Compile Include="Helpers\IIntegrationPointRuntimeServiceFactory.cs" />
     <Compile Include="Helpers\IntegrationPointRuntimeServiceFactory.cs" />
+    <Compile Include="Helpers\IPermissionRepositoryFactory.cs" />
     <Compile Include="Helpers\IRelativityManagerSoapFactory.cs" />
     <Compile Include="Helpers\PermissionModel.cs" />
     <Compile Include="Helpers\PermissionRepositoryFactory.cs" />
@@ -93,6 +95,9 @@
     <Compile Include="Models\RelativityProviderSourceConfigurationBackwardCompatibility.cs" />
     <Compile Include="Models\TotalItemsCountSearchDto.cs" />
     <Compile Include="HealthChecks\RelativityManagerSoapHealthCheck.cs" />
+    <Compile Include="Provider\GetSourceProviderRDOByApplicationIdentifier.cs" />
+    <Compile Include="Provider\ProviderInstaller.cs" />
+    <Compile Include="Provider\ProviderUninstaller.cs" />
     <Compile Include="Repositories\IIntegrationPointProfileRepository.cs" />
     <Compile Include="Repositories\IIntegrationPointTypeRepository.cs" />
     <Compile Include="Repositories\Implementations\DocumentRepository.cs" />
